# azure-vote

./: create_container_registry.sh  create_kube_cluster.sh  deploy_app.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploytoAksCluster.yml
azure-vote/: main.py  scaleVMSS.ps1
azure-vote/.github/workflows/: deploytoAksCluster.yml
azure-vote/manifests/: deployment.yml  service.yml
manifests/: deployment.yml  service.yml
