[tool.poetry]
name = "azure-vote"
version = "0.1.0"
description = ""
authors = ["Robert Franklin <cia05rf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "1.1.2"
opencensus-ext-azure = "1.0.4"
opencensus-ext-flask = "0.7.3"
redis = "3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
